--- a/src/Autofac.Integration.WebApi/RegistrationExtensionsResources.resx
+++ b/src/Autofac.Integration.WebApi/RegistrationExtensionsResources.resx
@@ -123,6 +123,9 @@
   <data name="ListMustNotBeEmptyOrContainNulls" xml:space="preserve">
     <value>Type list may not be empty or contain all null values.</value>
   </data>
+  <data name="MustBeAssignableToActionFilterType" xml:space="preserve">
+    <value>The type '{0}' must be assignable to '{1}' or '{2}'.</value>
+  </data>
   <data name="MustBeAssignableToFilterType" xml:space="preserve">
     <value>The type '{0}' must be assignable to '{1}'.</value>
   </data>
